# Xms represents the initial size of total heap space
# Xmx represents the maximum size of total heap space
-Xms{{ elastic_heap_space }}
-Xmx{{ elastic_heap_space }}

# specify an alternative path for heap dumps; ensure the directory exists and
# has sufficient space
-XX:HeapDumpPath={{ elastic_data_path }}

# specify an alternative path for JVM fatal error logs
-XX:ErrorFile={{ elastic_log_path }}/hs_err_pid%p.log

# JDK 9+ GC logging
-Xlog:gc*,gc+age=trace,safepoint:file={{ elastic_log_path }}/gc.log:utctime,level,pid,tags:filecount=32,filesize=64m
